--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,7 +19,7 @@
 -->
 <resources>
     <color name="pressed">#330066ff</color>
-    <color name="selection">@android:color/holo_blue_light</color>
+    <color name="selection">@drawable/light</color>
     <color name="today_highlight_color">#ff3eb0dd</color>
     <!-- The app wide background color -->
     <color name="background_color">#ff000000</color>
@@ -27,16 +27,16 @@
     <color name="panel_text_foreground">#ffffffff</color>
     <color name="calendar_event_text_color">#ffffffff</color>
     <color name="calendar_owner_text_color">#ffcfcfcf</color>
-    <color name="calendar_date_range_color">@android:color/holo_blue_dark</color>
-    <color name="week_saturday">@android:color/holo_blue_light</color>
-    <color name="week_sunday">@android:color/holo_blue_light</color>
+    <color name="calendar_date_range_color">@drawable/dark</color>
+    <color name="week_saturday">@drawable/light</color>
+    <color name="week_sunday">@drawable/light</color>
     <color name="calendar_future_bg_color">#ff000000</color>
-    <color name="calendar_hour_label">@android:color/holo_blue_light</color>
-    <color name="calendar_ampm_label">@android:color/holo_blue_light</color>
+    <color name="calendar_hour_label">@drawable/light</color>
+    <color name="calendar_ampm_label">@drawable/light</color>
     <color name="calendar_hour_background">#ff0a0a0a</color>
     <color name="calendar_date_banner_background">#ff3eb0dd</color>
     <color name="calendar_date_banner_text_color">#ffefefef</color>
-    <color name="calendar_grid_area_selected">@android:color/holo_blue_dark</color>
+    <color name="calendar_grid_area_selected">@drawable/dark</color>
     <color name="calendar_grid_line_inner_horizontal_color">#963eb0dd</color>
     <color name="calendar_grid_line_inner_vertical_color">#963eb0dd</color>
     <color name="calendar_grid_line_highlight_color">#963eb0dd</color>
@@ -52,8 +52,8 @@
     <color name="month_event_extra_color">#ffcfcfcf</color>
     <color name="month_event_other_color">#ffafafaf</color>
     <color name="month_event_extra_other_color">#4c999999</color>
-    <color name="month_saturday">@android:color/holo_blue_dark</color>
-    <color name="month_sunday">@android:color/holo_blue_dark</color>
+    <color name="month_saturday">@drawable/dark</color>
+    <color name="month_sunday">@drawable/dark</color>
     <color name="month_grid_lines">#963eb0dd</color>
     <color name="month_other_month_day_number">#ff000000</color>
     <color name="month_other_bgcolor">#ff081019</color>
@@ -82,7 +82,7 @@
     <!-- General background color in agenda view  -->
     <color name="agenda_general_background_color">#ff000000</color>
     <!-- Agenda day item text color  -->
-    <color name="agenda_day_item_text_color">@android:color/holo_blue_light</color>
+    <color name="agenda_day_item_text_color">@drawable/light</color>
     <!-- Color of the event location's text in an agenda item  -->
     <color name="agenda_item_where_text_color">#ffcfcfcf</color>
     <!-- Color of the event location's text in an agenda item  -->
@@ -94,14 +94,14 @@
     <!-- Color of the separator between items in the agenda list -->
     <color name="agenda_list_separator_color">#963eb0dd</color>
     <!-- Text color of a selected items in the agenda list - trumps all other text colors -->
-    <color name="agenda_selected_background_color">@android:color/holo_blue_light</color>
+    <color name="agenda_selected_background_color">@drawable/light</color>
     <!-- Background color of a selected items in the agenda list -->
     <color name="agenda_selected_text_color">#ffffffff</color>
     <!-- Text color of the "new event" hint in day and week views -->
     <color name="new_event_hint_text_color">#ffffffff</color>
     <!-- Event info colors -->
     <color name="event_info_headline_color">#ffffffff</color>
-    <color name="event_info_headline_link_color">@android:color/holo_blue_light</color>
+    <color name="event_info_headline_link_color">@drawable/light</color>
     <color name="event_info_organizer_color">#ffcfcfcf</color>
     <color name="event_info_description_color">#ffcfcfcf</color>
     <color name="event_info_body_color">#ffcfcfcf</color>
@@ -111,7 +111,7 @@
     <color name="alert_event_title">#ffffffff</color>
     <color name="alert_event_other">#ffcfcfcf</color>
     <color name="alert_past_event">#8fcfcfcf</color>
-    <color name="appwidget_row_in_progress">@android:color/holo_blue_dark</color>
+    <color name="appwidget_row_in_progress">@drawable/dark</color>
     <color name="appwidget_date">#ffeeeeee</color>
     <color name="appwidget_week">@android:color/white</color>
     <color name="appwidget_month">#ffeeeeee</color>
@@ -125,4 +125,9 @@
     <color name="appwidget_when">#ffffffff</color>
     <color name="appwidget_where">#ffffffff</color>
     <color name="appwidget_no_events">#ffffffff</color>
+
+    <!-- drawables for theme engine to pull -->
+    <drawable name="light">@android:color/holo_blue_light</drawable>
+    <drawable name="dark">@android:color/holo_blue_dark</drawable>
+    <drawable name="bright">@android:color/holo_blue_bright</drawable>
 </resources>
