--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,9 +18,9 @@
 */
 -->
 <resources>
-    <color name="pressed">#330066ff</color>
+    <color name="pressed">@drawable/dark</color>
     <color name="selection">@drawable/light</color>
-    <color name="today_highlight_color">#ff3eb0dd</color>
+    <color name="today_highlight_color">@drawable/light</color>
     <!-- The app wide background color -->
     <color name="background_color">#ff000000</color>
     <color name="event_background">#ff000000</color>
@@ -34,15 +34,15 @@
     <color name="calendar_hour_label">@drawable/light</color>
     <color name="calendar_ampm_label">@drawable/light</color>
     <color name="calendar_hour_background">#ff0a0a0a</color>
-    <color name="calendar_date_banner_background">#ff3eb0dd</color>
+    <color name="calendar_date_banner_background">@drawable/light</color>
     <color name="calendar_date_banner_text_color">#ffefefef</color>
     <color name="calendar_grid_area_selected">@drawable/dark</color>
-    <color name="calendar_grid_line_inner_horizontal_color">#963eb0dd</color>
-    <color name="calendar_grid_line_inner_vertical_color">#963eb0dd</color>
-    <color name="calendar_grid_line_highlight_color">#963eb0dd</color>
+    <color name="calendar_grid_line_inner_horizontal_color">@drawable/light</color>
+    <color name="calendar_grid_line_inner_vertical_color">@drawable/light</color>
+    <color name="calendar_grid_line_highlight_color">@drawable/dark</color>
     <color name="mini_month_bg_color">#ff000000</color>
     <color name="mini_month_today_outline_color">#ff707070</color>
-    <color name="month_day_number">#ff3eb0dd</color>
+    <color name="month_day_number">@drawable/light</color>
     <color name="month_mini_day_number">#ffdfdfdf</color>
     <color name="month_day_number_other">#ffffffff</color>
     <color name="month_week_num_color">#ffefefef</color>
@@ -54,15 +54,15 @@
     <color name="month_event_extra_other_color">#4c999999</color>
     <color name="month_saturday">@drawable/dark</color>
     <color name="month_sunday">@drawable/dark</color>
-    <color name="month_grid_lines">#963eb0dd</color>
+    <color name="month_grid_lines">@drawable/dark</color>
     <color name="month_other_month_day_number">#ff000000</color>
     <color name="month_other_bgcolor">#ff081019</color>
     <color name="month_selected_week_bgcolor">#ff000000</color>
-    <color name="month_today_bgcolor">#ff306396</color>
+    <color name="month_today_bgcolor">@drawable/dark</color>
     <color name="month_bgcolor">#ff000000</color>
     <color name="month_dna_conflict_time_color">#ff9f9f9f</color>
-    <color name="event_center">#ff6bd697</color>
-    <color name="edit_event_separator">#ff306396</color>
+    <color name="event_center">@drawable/dark</color>
+    <color name="edit_event_separator">@drawable/dark</color>
     <color name="calendar_visible">#ffffffff</color>
     <color name="calendar_hidden">#ff707070</color>
     <color name="calendar_secondary_visible">#ffffffff</color>
@@ -78,7 +78,7 @@
     <!-- Background Color of past events in agenda view  -->
     <color name="agenda_past_days_bar_background_color">#ff000000</color>
     <!-- Color of the separator between the past and the present/future in agenda view  -->
-    <color name="agenda_past_present_separator_color">#ff306396</color>
+    <color name="agenda_past_present_separator_color">@drawable/dark</color>
     <!-- General background color in agenda view  -->
     <color name="agenda_general_background_color">#ff000000</color>
     <!-- Agenda day item text color  -->
@@ -92,7 +92,7 @@
     <!-- Light color of text in the calendar view selection menu -->
     <color name="calendar_view_switch_menu_text_color_light">#ffc5c5c5</color>
     <!-- Color of the separator between items in the agenda list -->
-    <color name="agenda_list_separator_color">#963eb0dd</color>
+    <color name="agenda_list_separator_color">@drawable/light</color>
     <!-- Text color of a selected items in the agenda list - trumps all other text colors -->
     <color name="agenda_selected_background_color">@drawable/light</color>
     <!-- Background color of a selected items in the agenda list -->
